--- a/src/components/LocalMechanics.css
+++ b/src/components/LocalMechanics.css
@@ -4,3 +4,28 @@
     align-items: center;
     padding: 20px;
   }
+
+  .inner {
+    margin-bottom: 20px;
+}
+
+.link {
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    width: 24px;
+    height: 24px;
+    align-self: center; 
+    margin-top: 0em;
+    margin-right: 10px;
+}
+
+.title {
+    font-size: 24px;
+    font-weight: bold;
+}
